@@ -174,6 +174,8 @@ Bugs fixed
 - Fixed an error in :func:`open_file` when filename is a :class:`numpy.str_`
   (closes :issue:`204`)
 
+- Fixed :issue:`119`, where an index on Time64Col (only, Time32Col was ok)
+  hides the data on selection from a Tables
 
 .. _Python: http://www.python.org
 .. _PEP8: http://www.python.org/dev/peps/pep-0008
